Updated index.html file

--- a/client/index.html
+++ b/client/index.html
@@ -2,13 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+
+    <title>Buzzerio - Online Buzzer Game Platform</title>
+    <meta name="description" content="Buzzerio is a real-time online buzzer game platform. Create or join rooms, play buzzer-based games with friends, and host interactive quiz sessions with ease." />
+    <meta name="keywords" content="buzzer game, online quiz, real-time buzzer, Buzzerio, quiz platform, multiplayer buzzer" />
+    <meta name="author" content="Satyarth Sharma" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph Meta Tags (for social sharing) -->
+    <meta property="og:title" content="Buzzerio - Online Buzzer Game Platform" />
+    <meta property="og:description" content="Join or host real-time buzzer games with friends using Buzzerio. Fast, interactive, and fun!" />
+    <!-- <meta property="og:image" content="https://buzzerio.com/preview.png" /> Replace with actual image URL -->
+    <meta property="og:url" content="https://buzzerio-pw44.onrender.com/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Buzzerio - Online Buzzer Game Platform" />
+    <meta name="twitter:description" content="Create quiz rooms and play buzzer games online in real time." />
+    <!-- <meta name="twitter:image" content="https://buzzerio.com/preview.png" /> Replace with actual image URL -->
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://buzzerio-pw44.onrender.com/" />
   </head>
   <body>
     <div id="root"></div>
-    
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
